# Flappy-Bird-Prototype

./: CMakeLists.txt
include/: FlappyBird.hpp  Scenes.hpp  TextureBank.hpp
include/Components/: PipeComponent.hpp  PlayerComponent.hpp  RectangleComponent.hpp
include/Scenes/: GameScene.hpp  IScene.hpp
include/Systems/: PlayerMovementSystem.hpp  RectangleSystem.hpp  SceneManagerSystem.hpp
lib/GameEngine/: CMakeLists.txt
lib/GameEngine/include/: PhysicEngine.hpp
lib/GameEngine/include/Components/: InterpolationComponent.hpp
lib/GameEngine/src/Architecture/: Registry.cpp
lib/GameEngine/src/Components/: InterpolationComponent.cpp
lib/GraphicEngine/: CMakeLists.txt
lib/GraphicEngine/include/EventListeners/: InputEventListener.hpp
lib/GraphicEngine/include/Systems/: StartFrameSystem.hpp
lib/GraphicEngine/src/EventListeners/: InputEventListener.cpp
lib/GraphicEngine/src/Systems/: StartFrameSystem.cpp
lib/SfmlGraphic/: CMakeLists.txt
lib/SfmlGraphic/include/: SfmlGraphic.hpp
lib/SfmlGraphic/src/: SfmlGraphic.cpp
src/: TextureBank.cpp  main.cpp
src/Components/: PipeComponent.cpp  PlayerComponent.cpp  RectangleRectangle.cpp
src/Scenes/: GameScene.cpp
src/Systems/: PlayerMovementSystem.cpp  RectangleSystem.cpp  SceneManagerSystem.cpp
